# MAF

./: .gitignore  observability.py  requirements.txt  service_principal.py
AI_Science_tutor/: AI Science Tutor.docx  Documentation.docx  main.py  new.py  readme.md
Build_real_world_agents/AI_Science_tutor/: Readme.md  main.py
Build_real_world_agents/Idea_generator_and_validator/: .gitignore  Documentation.docx  Readme.md  requirements.txt
Build_real_world_agents/Playwright_MCP/: Documentation.docx  Readme.md  main.py
Build_real_world_agents/Product_conceptualizer/: Readme.md  requirements.txt
Build_real_world_agents/Study_schedule_agent_ADK/: Readme.md
Concurrent_orchestration/: Documentation.docx  MAF - Concurrent Orchestration.docx  Readme.md  main.py  main_with_observability.py  main_without_observability.py
Handoff_orchestration/: Documentation.docx  base.py  main.py
Idea_generator_and_validator/: Readme.md  agent_with_a2a.py
Idea_generator_and_validator/remote_agent/: __main__.py  agent_executor.py
Observability/: main.py  telemetry.py
Orchestration_workflows/Concurrent_orchestration/: Readme.md  main.py  (+1 more)
Playwright_MCP/: Documentation.docx  Playwright_MCP.docx  Playwright_MCP.md  Readme.md  main.py
Product_conceptualizer/: Documentation.docx  agent_with_a2a.py  requirements.txt
Product_conceptualizer/product_conceptualizer_agent/: __main__.py  agent.py  agent_executor.py  pyproject.toml
Sequential_orchestration/: Documentation.docx  main.py  readme.md
Study_schedule_agent_ADK/: Documentation.docx  agent_with_a2a.py  requirements.txt
(+32 files in other folders)
