[project]
name = "product-conceptualizer-agent"
version = "0.1.0"
description = "A specialized agent for generating product concepts for the A2A project."
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk>=0.2.5",
    "google-adk>=1.2.1",
    "python-dotenv",
    "uvicorn",
    "fastapi",
    "pydantic",
    "google-generativeai",
]